feat: add api endpoint and model for HpcaccessState (#441)
